still fixing the alignment and padding of feed_actions:

--- a/css/viewPostStyles.css
+++ b/css/viewPostStyles.css
@@ -164,7 +164,7 @@ textarea{
 }
 
 .feed_actions a{
-  padding: 7px 45px;
+  padding: 5px 55px;
   margin-top: 12px;
   margin-left: auto;
   border: none;
